tests/lean/unfold1.lean.expected.out
unfold1.lean:22:4-22:8: error: simp made no progress
case succ
x : Nat
ih : isEven (2 * x) = true
⊢ (match 2 * (x + 1) with
    | 0 => true
    | n.succ => isOdd n) =
    true
case succ
x : Nat
ih : isEven (2 * x) = true
⊢ isEven (2 * x) = true
